# http-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  file_info.c  get_file.c  main.c  mime_type.c  request.c  request.h  response.c  response.h  utilities.h  validate.c
server_root/: index.html
server_root/error/: 400.html
server_root/error_pages/: 400.html  404.html  405.html  500.html  501.html  505.html
src/: file_info.h  main.c  mime_type.c  mime_type.h  response.c
